phase 3 complete - Ready to test and capture

--- a/Factorialiser/Factorialiser/NLog.config
+++ b/Factorialiser/Factorialiser/NLog.config
@@ -22,7 +22,8 @@
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
     See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
     -->
-
+    <target xsi:type="File" name="error_log" fileName="${basedir}/error_log/${shortdate}.log"/>
+    <target xsi:type="File" name="track_log" fileName="${basedir}/track_log/${shortdate}.log"/>
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
@@ -32,7 +33,8 @@
 
   <rules>
     <!-- add your logging rules here -->
-
+    <logger name="*" minlevel="Warn" maxlevel="Fatal" writeTo="error_log"/>
+    <logger name="*" minlevel="Trace" maxlevel="Info" writeTo="track_log"/>
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
